@@ -822,7 +822,7 @@
 //==========================================
 
 //-- ITEM_ENCHANTARMS
-492,0,0,0,180000:180000:180000:180000:180000:1200000:1200000:1200000:1200000:1200000,0
+492,0,0,0,180000,0
 
 //===== Mixed Taekwon Skills ===============
 //-- TK_MISSION
