@@ -7209,7 +7209,7 @@ int skill_unit_onplace_timer (struct skill_unit *src, struct block_list *bl, uns
 		case UNT_ANKLESNARE:
 			if(sg->val2==0 && tsc){
 				int sec = skill_get_time2(sg->skill_id,sg->skill_lv);
-				if (status_change_start(bl,type,100,sg->skill_lv,sg->group_id,0,0,sec, 8))
+				if (status_change_start(bl,type,10000,sg->skill_lv,sg->group_id,0,0,sec, 8))
 				{
 					struct TimerData* td = get_timer(tsc->data[type].timer); 
 					if (td) sec = DIFF_TICK(td->tick, tick);
